<resources>
    <string name="app_name">KULUBS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Username atau Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="signupwith">Sign up with</string>
    <string name="loginwith">Login with</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="sign_up">Belum punya akun? <u>Sign Up</u></string>
    <string name="default_web_client_id">426782571217-ashvplqih94pdb8ofv89k6tlidlg939e.apps.googleusercontent.com</string>
</resources>