<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/logo_kulubs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="-27dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/raleway_light"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/raleway_light"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:backgroundTint="#FF9732"
            android:fontFamily="@font/raleway_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/raleway_light"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/raleway_light"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="0.8dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:fontFamily="@font/raleway_light"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.8dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loginwith"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/raleway_light"/>

        <ImageButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:src="@drawable/google"
            android:scaleType="centerInside"
            android:background="@drawable/bg_google"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>